[gd_scene load_steps=9 format=3 uid="uid://clpdj4xlxskgm"]

[ext_resource type="Texture2D" uid="uid://bs7v0nodsx568" path="res://assests/sprites/map/tilesets/Ground_rocks.png" id="1_ry644"]
[ext_resource type="Script" uid="uid://julv7uybn0pc" path="res://scripts/map/arena.gd" id="2_ce1uw"]
[ext_resource type="Script" uid="uid://dkcapw4gb3q8v" path="res://scripts/enemy_generator.gd" id="3_dxv3a"]
[ext_resource type="Resource" uid="uid://bnj7tmht5awdd" path="res://resources/wave/wave1.tres" id="4_dxv3a"]
[ext_resource type="PackedScene" uid="uid://cqrphsbtpcpe4" path="res://scenes/UI/counter.tscn" id="8_lix01"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dinhu"]
texture = ExtResource("1_ry644")
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/terrains_peering_bit/right_side = 0
2:2/0/terrains_peering_bit/bottom_right_corner = 0
2:2/0/terrains_peering_bit/bottom_side = 0
2:2/0/terrains_peering_bit/bottom_left_corner = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0
2:2/0/terrains_peering_bit/top_right_corner = 0
2:0/size_in_atlas = Vector2i(1, 2)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, 8)
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -16, 8, -16, 8, -20, -8, -20)
2:0/0/terrains_peering_bit/right_side = 0
2:0/0/terrains_peering_bit/bottom_right_corner = 0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/size_in_atlas = Vector2i(2, 2)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(-8, 8)
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(12, -20, 12, 8, 4, 8, -8, -16, -8, -20)
3:0/0/terrains_peering_bit/bottom_side = 0
3:0/0/terrains_peering_bit/bottom_left_corner = 0
3:0/0/terrains_peering_bit/left_side = 0
0:0/size_in_atlas = Vector2i(2, 2)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(8, 8)
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -20, 8, -20, 8, -16, -4, 8, -12, 8)
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
3:2/size_in_atlas = Vector2i(2, 1)
3:2/0 = 0
3:2/0/texture_origin = Vector2i(-8, 0)
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -8, 4, 8, 12, 8, 12, -8)
3:2/0/terrains_peering_bit/bottom_side = 0
3:2/0/terrains_peering_bit/bottom_left_corner = 0
3:2/0/terrains_peering_bit/left_side = 0
3:2/0/terrains_peering_bit/top_left_corner = 0
3:2/0/terrains_peering_bit/top_side = 0
0:2/size_in_atlas = Vector2i(2, 1)
0:2/0 = 0
0:2/0/texture_origin = Vector2i(8, 0)
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 8, -4, -8, -12, -8, -12, 8)
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/bottom_right_corner = 0
0:2/0/terrains_peering_bit/bottom_side = 0
0:2/0/terrains_peering_bit/top_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
2:3/size_in_atlas = Vector2i(1, 4)
2:3/0 = 0
2:3/0/texture_origin = Vector2i(0, -24)
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0, 8, 0, 8, 32, -8, 32)
2:3/0/terrains_peering_bit/right_side = 0
2:3/0/terrains_peering_bit/left_side = 0
2:3/0/terrains_peering_bit/top_left_corner = 0
2:3/0/terrains_peering_bit/top_side = 0
2:3/0/terrains_peering_bit/top_right_corner = 0
3:3/size_in_atlas = Vector2i(2, 4)
3:3/0 = 0
3:3/0/texture_origin = Vector2i(-8, -24)
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -8, -8, 0, -8, 32, 4, 32, 12, 24, 12, -8)
3:3/0/terrains_peering_bit/left_side = 0
3:3/0/terrains_peering_bit/top_left_corner = 0
3:3/0/terrains_peering_bit/top_side = 0
0:3/size_in_atlas = Vector2i(2, 4)
0:3/next_alternative_id = 2
0:3/0 = 0
0:3/0/texture_origin = Vector2i(8, -24)
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -8, 8, 0, 8, 32, -4, 32, -12, 24, -12, -8)
0:3/0/terrains_peering_bit/right_side = 0
0:3/0/terrains_peering_bit/top_side = 0
0:3/0/terrains_peering_bit/top_right_corner = 0
19:8/size_in_atlas = Vector2i(2, 2)
19:8/0 = 0
19:8/0/texture_origin = Vector2i(-8, 8)
19:8/0/terrain_set = 0
19:8/0/terrain = 0
19:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -20, 8, -16, 24, -16, 24, -20, 12, -20, 12, -24, 4, -24)
19:8/0/terrains_peering_bit/right_side = 0
19:8/0/terrains_peering_bit/bottom_right_corner = 0
19:8/0/terrains_peering_bit/bottom_side = 0
19:8/0/terrains_peering_bit/bottom_left_corner = 0
19:8/0/terrains_peering_bit/left_side = 0
19:8/0/terrains_peering_bit/top_left_corner = 0
19:8/0/terrains_peering_bit/top_side = 0
21:8/size_in_atlas = Vector2i(2, 2)
21:8/0 = 0
21:8/0/texture_origin = Vector2i(8, 8)
21:8/0/terrain_set = 0
21:8/0/terrain = 0
21:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -16, -8, -16, -4, -20, -4, -24, -12, -24, -12, -20, -24, -20)
21:8/0/terrains_peering_bit/right_side = 0
21:8/0/terrains_peering_bit/bottom_right_corner = 0
21:8/0/terrains_peering_bit/bottom_side = 0
21:8/0/terrains_peering_bit/bottom_left_corner = 0
21:8/0/terrains_peering_bit/left_side = 0
21:8/0/terrains_peering_bit/top_side = 0
21:8/0/terrains_peering_bit/top_right_corner = 0
23:1/size_in_atlas = Vector2i(2, 4)
23:1/0 = 0
23:1/0/texture_origin = Vector2i(-8, -24)
23:1/0/terrain_set = 0
23:1/0/terrain = 0
23:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(24, -4, 12, -4, 4, 4, 4, 32, 12, 32, 24, 32)
23:1/0/terrains_peering_bit/right_side = 0
23:1/0/terrains_peering_bit/bottom_side = 0
23:1/0/terrains_peering_bit/bottom_left_corner = 0
23:1/0/terrains_peering_bit/left_side = 0
23:1/0/terrains_peering_bit/top_left_corner = 0
23:1/0/terrains_peering_bit/top_side = 0
23:1/0/terrains_peering_bit/top_right_corner = 0
21:1/size_in_atlas = Vector2i(2, 4)
21:1/0 = 0
21:1/0/texture_origin = Vector2i(8, -24)
21:1/0/terrain_set = 0
21:1/0/terrain = 0
21:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -4, -12, -4, -4, 4, -4, 36, -12, 36, -24, 36)
21:1/0/terrains_peering_bit/right_side = 0
21:1/0/terrains_peering_bit/bottom_right_corner = 0
21:1/0/terrains_peering_bit/bottom_side = 0
21:1/0/terrains_peering_bit/left_side = 0
21:1/0/terrains_peering_bit/top_left_corner = 0
21:1/0/terrains_peering_bit/top_side = 0
21:1/0/terrains_peering_bit/top_right_corner = 0

[sub_resource type="TileSet" id="TileSet_dinhu"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "ground_rock"
terrain_set_0/terrain_0/color = Color(0.29889604, 0.84694654, 0, 1)
sources/0 = SubResource("TileSetAtlasSource_dinhu")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vi5yi"]
size = Vector2(541.75, 298.75)

[node name="Arena" type="Node2D" node_paths=PackedStringArray("start_point")]
script = ExtResource("2_ce1uw")
start_point = NodePath("StartPoint")

[node name="Map" type="TileMapLayer" parent="."]
position = Vector2(240, 131)
tile_set = SubResource("TileSet_dinhu")

[node name="StartPoint" type="Node2D" parent="."]
position = Vector2(240, 131)

[node name="EnnemyGenetaor" type="Node2D" parent="." node_paths=PackedStringArray("spawn_area")]
script = ExtResource("3_dxv3a")
wave = ExtResource("4_dxv3a")
spawn_area = NodePath("Area2D")
metadata/_custom_type_script = "uid://dkcapw4gb3q8v"

[node name="Area2D" type="Area2D" parent="EnnemyGenetaor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnnemyGenetaor/Area2D"]
position = Vector2(240, 131)
shape = SubResource("RectangleShape2D_vi5yi")

[node name="Counter" parent="." instance=ExtResource("8_lix01")]

[connection signal="enemy_died" from="EnnemyGenetaor" to="." method="_on_ennemy_genetaor_enemy_died"]
[connection signal="enemy_spawned" from="EnnemyGenetaor" to="." method="_on_ennemy_genetaor_enemy_spawned"]
[connection signal="wave_finished" from="EnnemyGenetaor" to="." method="_on_ennemy_genetaor_wave_finished"]
[connection signal="counting_completed" from="Counter" to="." method="_on_counter_counting_completed"]
